--- a/ABC20190521-郎朗口腔-www.xxx.com-20190521/css/normalize.css
+++ b/ABC20190521-郎朗口腔-www.xxx.com-20190521/css/normalize.css
@@ -12,7 +12,12 @@
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
   }
+
+  body, div, img,dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, table, th, td {margin:0; padding:0;}  
   
+  ul{
+    list-style: none;
+  }
   /* Sections
      ========================================================================== */
   
@@ -22,6 +27,10 @@
   
   body {
     margin: 0;
+    color:#010101;
+    font-family: 'Microsoft YaHei';
+    font-weight: 300;
+    font-size: 12px;
   }
   
   /**
@@ -75,6 +84,7 @@
   
   a {
     background-color: transparent;
+    text-decoration: none;
   }
   
   /**
